--- a/Projeto/relatorio/04_resultados.tex
+++ b/Projeto/relatorio/04_resultados.tex
@@ -50,7 +50,7 @@ Parâmetros específicos do \textit{Simulated Annealing}:
 \begin{itemize}
     \item $T_0 = 10.0$, $T_{\text{min}} = 10^{-4}$
     \item Fator de resfriamento: $\beta = 0.90$
-    \item Perturbações por temperatura: 50
+    \item Iretaçoes por ciclo: $N=50$
 \end{itemize}
 
 Cada cenário é repetido 100 vezes para as 3 políticas e 9 níveis de densidade, totalizando 2700 simulações. Os resultados são apresentados como médias, em valores absolutos (ex: distância e tempo) ou percentuais (ex: taxa de detecção/inspeção), conforme o caso.
