--- a/Projeto/relatorio/05_conclusao.tex
+++ b/Projeto/relatorio/05_conclusao.tex
@@ -13,4 +13,4 @@ Este trabalho apresentou uma abordagem de planejamento dinâmico de rotas para V
 
 A política \textit{greed} obteve melhor desempenho geral, especialmente em cenários com mais de 75 navios, combinando bons resultados com baixo custo computacional. Já o \textit{Simulated Annealing} mostrou vantagens em cenários menos densos. Em ambientes mais carregados, a limitação de autonomia do VANT reduziu a eficácia das estratégias ativas.
 
-Como trabalhos futuros, propõe-se: (i) incorporar dinâmica realista do VANT, com restrições de manobra e aceleração; (ii) permitir movimento dos navios; (iii) paralelizar simulação e otimização para replanejamento em tempo real; (iv) investigar funções de custo mais elaboradas, que penalizem cruzamentos de trajetória, priorizem alvos relevantes e equilibrem cobertura com eficiência de percurso. Tais avanços podem tornar a abordagem mais aplicável a cenários operacionais reais.
+Como trabalhos futuros, propõe-se: (i) incorporar dinâmica realista do VANT, com restrições de manobra e aceleração; (ii) permitir movimento dos navios; (iii) paralelizar simulação e otimização para replanejamento em tempo real; (iv) investigar funções de custo mais elaboradas, que levem em consideração a exploração do ambiente. Tais avanços podem tornar a abordagem mais aplicável a cenários operacionais reais.
